[package]
name = "roguelike2021"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = { version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.1"
rltk = { git = "https://github.com/amethyst/bracket-lib", features = ["serde"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
getrandom = { version = "0.2", features = ["js"] }
